--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimary"
     tools:context=".LoginActivity">
 
     <!-- login progress -->
@@ -39,9 +39,9 @@
                 android:src="@drawable/icon"/>
 
             <android.support.design.widget.TextInputLayout
-                android:layout_marginTop="250px"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="250px">
 
                 <EditText
                     android:id="@+id/account"
@@ -77,43 +77,43 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_login"
-                android:textStyle="bold"
                 android:background="@color/colorAccent"
-                android:textColor="@color/colorWhite"/>
+                android:text="@string/login"
+                android:textColor="@color/colorWhite"
+                android:textStyle="bold" />
 
             <LinearLayout
-                android:layout_marginTop="300px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="300px"
                 android:orientation="horizontal"
                 android:weightSum="7">
                 <TextView
                     android:id="@+id/register"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     android:gravity="right"
-                    android:textSize="17sp"
+                    android:text="@string/register_account"
                     android:textColor="@color/colorWhite"
-                    android:text="@string/register_account"/>
+                    android:textSize="17sp" />
                 <TextView
-                    android:layout_weight="3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="3"
                     android:gravity="center"
-                    android:textSize="17sp"
+                    android:text="|"
                     android:textColor="@color/colorWhite"
-                    android:text="|"/>
+                    android:textSize="17sp" />
                 <TextView
                     android:id="@+id/forget_password"
-                    android:layout_weight="2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="2"
                     android:gravity="left"
-                    android:textSize="17sp"
+                    android:text="@string/forget_password"
                     android:textColor="@color/colorWhite"
-                    android:text="@string/forget_password"/>
+                    android:textSize="17sp" />
             </LinearLayout>
         </LinearLayout>
 
