--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimary"
     tools:context=".RegisterActivity">
 
     <!-- register progress -->
@@ -38,9 +38,9 @@
                 android:src="@drawable/icon"/>
 
             <android.support.design.widget.TextInputLayout
-                android:layout_marginTop="200px"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="200px">
 
                 <EditText
                     android:id="@+id/email"
@@ -59,10 +59,10 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/nickname"
+                    android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/nickname"
+                    android:hint="@string/username"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -108,10 +108,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/register"
-                android:textStyle="bold"
                 android:background="@color/colorAccent"
-                android:textColor="@color/colorWhite"/>
+                android:text="@string/register"
+                android:textColor="@color/colorWhite"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
