1、添加第三方图像加载库与圆形头像控件； 2、实现登录退出整个流程的逻辑； 3、整体界面的完成

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:id="@+id/share_wechatmoments"
+        android:icon="@drawable/wechatmoments"
+        android:title="@string/share_wechatmoments"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/share_wechat"
+        android:icon="@drawable/wechat"
+        android:title="@string/share_wechat"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/share_qzone"
+        android:icon="@drawable/qzone"
+        android:title="@string/share_qzone"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/share_qq"
+        android:icon="@drawable/qq"
+        android:title="@string/share_qq"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/share_weibo"
+        android:icon="@drawable/weibo"
+        android:title="@string/share_weibo"
         app:showAsAction="never" />
 </menu>
