--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,14 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.left.shothappy.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <SurfaceView
-        android:id="@+id/SurfaceView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 </RelativeLayout>
