--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,31 +6,31 @@
             android:id="@+id/nav_camera"
             android:checked="true"
             android:icon="@drawable/ic_menu_camera"
-            android:title="AR认知" />
+            android:title="@string/title_ar" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="词库" />
+            android:title="@string/title_thesaurus" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="学习进度" />
+            android:title="@string/title_rateoflearning" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="设置" />
+            android:title="@string/title_setting" />
     </group>
 
-    <item android:title="交流与联系">
+    <item android:title="@string/title_communication">
         <menu>
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="分享应用" />
+                android:title="@string/title_share_app" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
-                android:title="意见反馈" />
+                android:title="@string/title_goto_rank" />
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@android:drawable/ic_delete"
