--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGray">#9C9C9C</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorDarkGray">#BDBDBD</color>
 </resources>
