--- a/app/src/main/res/layout/view_changepassword.xml
+++ b/app/src/main/res/layout/view_changepassword.xml
@@ -10,26 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <EditText
-        android:id="@+id/content"
+        android:id="@+id/old_password"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:autoLink="all"
-        android:autoText="true"
-        android:inputType="textMultiLine"
-        android:lines="10"
-        android:maxEms="20"
-        android:maxLines="15"
-        android:singleLine="false" />
+        android:hint="@string/old_password"
+        android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/submit"
-        style="?android:textAppearanceSmall"
+    <EditText
+        android:id="@+id/new_password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:background="@color/colorAccent"
-        android:text="@string/submit"
-        android:textColor="@color/colorWhite"
-        android:textStyle="bold" />
-
+        android:layout_height="match_parent"
+        android:hint="@string/new_password"
+        android:inputType="textPassword" />
 </LinearLayout>
