--- a/app/src/main/res/layout/view_feedback.xml
+++ b/app/src/main/res/layout/view_feedback.xml
@@ -9,10 +9,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <Button
-        android:id="@+id/download"
+    <EditText
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="开始离线下载词库" />
+        android:layout_height="match_parent"
+        android:hint="@string/feedback_content_hint"
+        android:inputType="textMultiLine" />
 
 </LinearLayout>
