1、实现词库界面的主要布局； 2、下拉刷新的控件添加； 3、离线下载放到设置中

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorGray">#9C9C9C</color>
     <color name="colorBlack">#000000</color>
     <color name="colorDarkGray">#BDBDBD</color>
+    <color name="colorLightBlue">#7AD6EB</color>
 </resources>
