1、解决viewpager在多fragment切换时的缓存问题； 2、翻译发音的实现； 3、cardview库的导入与翻译详情的展示

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorBlack">#000000</color>
     <color name="colorDarkGray">#BDBDBD</color>
     <color name="colorLightBlue">#7AD6EB</color>
+    <color name="colorGreen">#56E689</color>
 </resources>
