--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -18,118 +18,122 @@
         app:cardBackgroundColor="@color/colorGreen"
         app:cardCornerRadius="20dp">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="40px"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/key"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="key"
-                android:textColor="@color/colorWhite"
-                android:textSize="26sp"
-                android:textStyle="bold" />
-
+            android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10px"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/ps1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="ps1"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="26sp" />
-
-                <ImageView
-                    android:id="@+id/ps1sound"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="10px"
-                    android:src="@android:drawable/ic_lock_silent_mode_off" />
-
-                <TextView
-                    android:id="@+id/ps2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="100px"
-                    android:text="ps2"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="26sp" />
-
-                <ImageView
-                    android:id="@+id/ps2sound"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="10px"
-                    android:src="@android:drawable/ic_lock_silent_mode_off" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10px"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/pos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="pos"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="26sp" />
-
-                <TextView
-                    android:id="@+id/acceptation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="100px"
-                    android:text="acceptation"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="26sp" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50px"
-                android:text="双语例句"
-                android:textColor="@color/colorWhite"
-                android:textSize="20sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10px"
+                android:layout_height="match_parent"
+                android:layout_margin="40px"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/orig"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/key"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="orig"
+                    android:text="key"
                     android:textColor="@color/colorWhite"
-                    android:textSize="26sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10px"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/ps1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="ps1"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="15sp" />
+
+                    <ImageView
+                        android:id="@+id/ps1sound"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10px"
+                        android:src="@android:drawable/ic_lock_silent_mode_off" />
+
+                    <TextView
+                        android:id="@+id/ps2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="100px"
+                        android:text="ps2"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="15sp" />
+
+                    <ImageView
+                        android:id="@+id/ps2sound"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10px"
+                        android:src="@android:drawable/ic_lock_silent_mode_off" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10px"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/pos"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="pos"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/acceptation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="50px"
+                        android:text="acceptation"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="15sp" />
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/trans"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="trans"
+                    android:layout_marginTop="40px"
+                    android:text="双语例句"
                     android:textColor="@color/colorWhite"
-                    android:textSize="26sp" />
+                    android:textSize="18sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/orig"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="orig"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/trans"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="trans"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="15sp" />
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
+        </ScrollView>
+
     </android.support.v7.widget.CardView>
 
 </FrameLayout>
