--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -18,6 +18,17 @@
         app:cardBackgroundColor="@color/colorGreen"
         app:cardCornerRadius="20dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:src="@android:drawable/ic_delete" />
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -133,6 +144,7 @@
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
