添加今日奖励功能，每日提供一集动画片

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,9 @@
         <item name="android:background">#5fa3d0</item>
     </style>
 
+    <style name="FullScreenTheme" parent="AppTheme.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
 </resources>
