1、修改图标； 2、增加10个新的模型； 3、优化单词卡片间隔

--- a/app/src/main/res/layout/activity_reward.xml
+++ b/app/src/main/res/layout/activity_reward.xml
@@ -8,6 +8,7 @@
     <VideoView
         android:id="@+id/reward_video"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
