--- a/app/src/main/res/layout/fragment_ar.xml
+++ b/app/src/main/res/layout/fragment_ar.xml
@@ -126,6 +126,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
                         android:orientation="vertical">
 
                         <TextView
@@ -140,6 +141,7 @@
                             android:id="@+id/trans"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
                             android:text="trans"
                             android:textColor="@color/colorWhite"
                             android:textSize="15sp" />
