1、词库界面完成； 2、单词卡片、设置的字体调整；

--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -114,6 +114,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/bilingual"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40px"
