1、布局优化，提取公共部分； 2、代码优化，提取基类

--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -9,176 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></FrameLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <include layout="@layout/view_title" />
 
-        <ImageView
-            android:id="@+id/back"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/back" />
-
-        <ImageView
-            android:id="@+id/title"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/title_ar" />
-
-        <ImageView
-            android:id="@+id/share"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/share" />
-    </RelativeLayout>
-
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/cardview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:visibility="gone"
-        app:cardBackgroundColor="@color/colorGreen"
-        app:cardCornerRadius="20dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:src="@android:drawable/ic_delete" />
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="40px"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/key"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:text="key"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10px"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/ps1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:text="ps1"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="15sp" />
-
-                        <ImageView
-                            android:id="@+id/ps1sound"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10px"
-                            android:src="@android:drawable/ic_lock_silent_mode_off" />
-
-                        <TextView
-                            android:id="@+id/ps2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="100px"
-                            android:text="ps2"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="15sp" />
-
-                        <ImageView
-                            android:id="@+id/ps2sound"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10px"
-                            android:src="@android:drawable/ic_lock_silent_mode_off" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10px"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/pos"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="pos"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="15sp" />
-
-                        <TextView
-                            android:id="@+id/acceptation"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="50px"
-                            android:text="acceptation"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="15sp" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/bilingual"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="40px"
-                        android:text="双语例句"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="18sp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/orig"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="orig"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="15sp" />
-
-                        <TextView
-                            android:id="@+id/trans"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:text="trans"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="15sp" />
-                    </LinearLayout>
-                </LinearLayout>
-            </ScrollView>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
+    <include layout="@layout/view_card" />
 
     <LinearLayout
         android:id="@+id/speak_tip_view"
@@ -199,7 +32,6 @@
             android:layout_height="70dp"
             android:src="@drawable/speak_over" />
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -222,76 +54,7 @@
             android:background="@drawable/speak" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/share_panel"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:background="@drawable/share_panel"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/close_share"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/close" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/share_wechatmoments"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:src="@drawable/umeng_socialize_wxcircle" />
-
-            <ImageView
-                android:id="@+id/share_wechat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/umeng_socialize_wechat" />
-
-            <ImageView
-                android:id="@+id/share_qzone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/umeng_socialize_qzone_on" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/share_qq"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="40dp"
-                android:src="@drawable/umeng_socialize_qq_on" />
-
-            <ImageView
-                android:id="@+id/share_weibo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="40dp"
-                android:src="@drawable/umeng_socialize_sina_on" />
-        </RelativeLayout>
-    </LinearLayout>
+    <include layout="@layout/view_share" />
 
 </FrameLayout>
 
