1、部分图标优化； 2、只等try again的录音即可全部完工

--- a/app/src/main/res/layout/view_share.xml
+++ b/app/src/main/res/layout/view_share.xml
@@ -6,7 +6,7 @@
     android:layout_gravity="center"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
-    android:background="@drawable/share_panel"
+    android:background="@drawable/share_background"
     android:orientation="vertical"
     android:visibility="gone">
 
