--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -35,22 +35,21 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/follow_speak_view"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/follow_speak"
+            android:src="@drawable/read"
             android:visibility="gone" />
 
         <ImageView
             android:id="@+id/fab"
-            android:layout_width="70dp"
+            android:layout_width="match_parent"
             android:layout_height="70dp"
             android:background="@drawable/speak" />
     </LinearLayout>
